--- a/style.css
+++ b/style.css
@@ -12,10 +12,12 @@
   --bg-color-primary: #000;
 
   --bg-color-table-header: #092d38;
-  --br-color-table-tr-even: #4a808c;
-  --bg-color-table-tr-odd: #06161b80;
+  --br-color-table-tr-even: #06181c;
+  --bg-color-table-tr-odd: rgba(6, 22, 27, 0.5);
 
   --text-color-table: #e1e1e6;
+  --text-color-table-empty: #4e5455;
+  --border-color-table: #4a808c;
 
   --bg-color-button-primary: #065e7c;
   --bg-color-button-hover: #ffffff;
@@ -33,12 +35,14 @@
 body {
   font-size: 1.6rem;
   background: #000000ae;
-  /* background-color: var(--bg-color-primary); */
+  background-color: var(--bg-color-primary);
 }
 
 #app {
   max-width: 111rem;
   padding: 0 2rem;
+
+  margin: 0 auto;
 }
 
 header {
@@ -55,7 +59,7 @@ header {
   gap: 8px;
 }
 .search input {
-  width: 46.2rem;
+  width: 39.2rem;
   background-color: var(--bg-color-input);
   padding: 1.6rem;
   border: none;
@@ -98,4 +102,119 @@ header {
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border-width: 0;
+}
+
+.hide {
+  display: none;
+}
+/*** style table*/
+table {
+  width: 100%;
+
+  border-collapse: collapse;
+}
+
+table tr:nth-child(odd) {
+  background: var(--bg-color-table-tr-odd);
+}
+
+table tr:nth-child(even) {
+  background: var(--br-color-table-tr-even);
+}
+
+table * {
+  color: var(--text-color-table);
+}
+
+table th,
+table td {
+  text-align: left;
+
+  font-style: normal;
+  font-weight: 700;
+  line-height: 160%;
+}
+
+table th {
+  padding: 1.6rem 4rem;
+  background-color: #092d38;
+
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 160%; /* 32px */
+}
+
+table th:first-child {
+  border-top-left-radius: 1.2rem;
+}
+
+table th:last-child {
+  border-top-right-radius: 1.2rem;
+}
+
+table td {
+  padding: 2.8rem 4rem;
+}
+
+table td.user {
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 160%;
+}
+table td.user a {
+  text-decoration: none;
+}
+
+table td.user a span {
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%;
+}
+
+table td.user img {
+  width: 5rem;
+  height: 5rem;
+
+  object-fit: cover;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+table td .remove {
+  color: var(--text-color-button-remove);
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 160%;
+
+  background: none;
+  border: 0;
+  cursor: pointer;
+}
+
+table .table-empty div {
+  display: flex;
+  align-items: center;
+  padding: 21rem 19.2rem;
+  gap: 6rem;
+}
+
+table .table-empty div p {
+  color: var(--text-color-table-empty);
+  font-size: 4rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24.781px;
+}
+
+table .table-empty div img {
+  width: 13.2rem;
+  height: 12.5rem;
 }
